--- a/houses.html
+++ b/houses.html
@@ -111,115 +111,33 @@
     </form>
 
     <!-- *** SEARCH BAR END *** -->
-    <section class="search-page-results">
-      <div class="card">
-        <img
-          src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
-          class="card-img-top"
-          alt="..."
-        />
-        <div class="card-body">
-          <a href="#" class="card-link card-location">Chaweng</a>
-          <span>• 4 Rooms</span>
-          <h5 class="card-title">Kyles place in Koh Phangan</h5>
-          <div class="card-location-wrapper1">
-            <a href="#" class="card-link card-reviews card-location"
-              >4 Reviews</a
-            >
-            <span>$450/night</span>
+    <!-- *** HOUSE SEARCH RESULTS START*** -->
+    <div class="container text-center">
+      <div class="row row-cols-4 g-4">
+        <!-- ** House Card Start ** -->
+        <div class="col">
+          <div class="card">
+            <img
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <span class="card-link card-location text-muted">Chaweng</span>
+              <span class="text-muted">• 4 Rooms</span>
+              <h5 class="card-title">Kyles place in Koh Phangan</h5>
+              <div class="card-location-wrapper1">
+                <span class="card-link card-reviews card-location"
+                  >4 Reviews</span
+                >
+                <span>$450/night</span>
+              </div>
+            </div>
           </div>
         </div>
+        <!-- ** house card end ** -->
       </div>
-      <div class="card">
-        <img
-          src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2002/house_02_01.png"
-          class="card-img-top"
-          alt="..."
-        />
-        <div class="card-body">
-          <a href="#" class="card-link card-location">Koh Phangan</a>
-          <span>• 4 Rooms</span>
-          <h5 class="card-title">Kyles place in Koh Phangan</h5>
-          <div class="card-location-wrapper1">
-            <a href="#" class="card-link card-reviews card-location"
-              >4 Reviews</a
-            >
-            <span>$450/night</span>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <img
-          src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2003/house_03_01.png"
-          class="card-img-top"
-          alt="..."
-        />
-        <div class="card-body">
-          <a href="#" class="card-link card-location">Chaweng</a>
-          <span>• 4 Rooms</span>
-          <h5 class="card-title">Kyles place in Chaweng</h5>
-          <div class="card-location-wrapper1">
-            <a href="#" class="card-link card-reviews card-location"
-              >4 Reviews</a
-            >
-            <span>$450/night</span>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <img
-          src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2004/house_04_01.png"
-          class="card-img-top"
-          alt="..."
-        />
-        <div class="card-body">
-          <a href="#" class="card-link card-location">Chaweng</a>
-          <span>• 4 Rooms</span>
-          <h5 class="card-title">Kyles place in Chaweng</h5>
-          <div class="card-location-wrapper1">
-            <a href="#" class="card-link card-reviews card-location"
-              >4 Reviews</a
-            >
-            <span>$450/night</span>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <img
-          src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2005/house_05_01.png"
-          class="card-img-top"
-          alt="..."
-        />
-        <div class="card-body">
-          <a href="#" class="card-link card-location">Koh Phangan</a>
-          <span>• 4 Rooms</span>
-          <h5 class="card-title">Kyles place in Koh Phangan</h5>
-          <div class="card-location-wrapper1">
-            <a href="#" class="card-link card-reviews card-location"
-              >4 Reviews</a
-            >
-            <span>$450/night</span>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <img
-          src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2006/house_06_01.png"
-          class="card-img-top"
-          alt="..."
-        />
-        <div class="card-body">
-          <a href="#" class="card-link card-location">Koh Phangan</a>
-          <span>• 4 Rooms</span>
-          <h5 class="card-title">Kyles place in Koh Phangan</h5>
-          <div class="card-location-wrapper1">
-            <a href="#" class="card-link card-reviews card-location"
-              >4 Reviews</a
-            >
-            <span>$450/night</span>
-          </div>
-        </div>
-      </div>
-    </section>
+    </div>
+    <!-- *** HOUSE SEARCH RESULTS END *** -->
   </body>
 </html>
