--- a/house-create.html
+++ b/house-create.html
@@ -42,13 +42,14 @@
     <!-- *** HOUSE LISTING START*** -->
     <div class="container text-center p-5 m- 5">
       <h2>List a House</h2>
+      <!-- **** WHOLE FORM START **** -->
       <form action="" class="list-house-form text-start">
         <!-- *** LIST HOUSE FORM START *** -->
         <div class="mb-3">
           <label for="formGroupExampleInput" class="form-label"
             >Short Title</label
           >
-          <input type="text" class="form-control" id="formGroupExampleInput" />
+          <input type="text" class="form-control" name="house-title" />
         </div>
         <!-- *** LIST HOUSE FORM END *** -->
         <!-- *** LIST HOUSE FORM START *** -->
@@ -60,29 +61,23 @@
             rows="6"
             cols="80"
             class="form-control"
-            id="formGroupExampleInput2"
+            name="house-description"
           ></textarea>
           <div class="mb-3">
             <label for="formGroupExampleInput" class="form-label"
               >Number of Rooms</label
             >
-            <input
-              type="number"
-              class="form-control"
-              id="formGroupExampleInput"
-            />
+            <input type="number" class="form-control" name="house-rooms" />
           </div>
         </div>
         <!-- *** LIST HOUSE FORM END *** -->
         <!-- *** LIST HOUSE FORM START *** -->
         <div class="mb-3">
-          <label for="formGroupExampleInput" class="form-label"
-            >Short Title</label
-          >
-          <select class="form-select" id="formGroupExampleInput">
-            <option value="1">Koh Phangan</option>
-            <option value="2">Kah Samui</option>
-            <option value="3">Bali</option>
+          <label for="formGroupExampleInput" class="form-label">Location</label>
+          <select class="form-select" name="house-location">
+            <option value="kp1">Koh Phangan</option>
+            <option value="ks1">Kah Samui</option>
+            <option value="ba1">Bali</option>
           </select>
         </div>
         <!-- *** LIST HOUSE FORM END *** -->
@@ -97,100 +92,105 @@
               type="number"
               class="form-control"
               aria-label="Amount (to the nearest dollar)"
+              name="house-price"
             />
             <span class="input-group-text">.00</span>
           </div>
         </div>
         <!-- *** HOUSE PRICE FORM END *** -->
         <!-- *** ADD PHOTOS START*** -->
-        <label for="basic-url" class="form-label">Your vanity URL</label>
+        <label for="basic-url" class="form-label">Add Photos (Up to 9)</label>
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
+
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
+
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
+
         <!-- *** ADD PHOTOS END *** -->
         <div class="">
-          <button type="button" class="btn btn-success">Submit</button>
+          <button class="btn btn-success">Submit</button>
         </div>
       </form>
+      <!-- **** WHOLE FORM END **** -->
     </div>
-    <!-- *** HOUSE LISTING END*** -->
+    >
   </body>
 </html>
