--- a/house-edit.html
+++ b/house-edit.html
@@ -13,34 +13,43 @@
     <link rel="stylesheet" href="./styles/airbnbStyleSheet.css" />
   </head>
   <body>
-    <nav class="top-nav">
-      <div class="nav-logo">
-        <img src="./images/logo-airbnb.png" alt="" />
-      </div>
-      <div class="nav-buttons">
-        <button type="button" class="btn btn-outline-secondary profile-button">
-          <img
-            src="https://avatars.githubusercontent.com/u/19708712?v=4"
-            alt=""
-            class="profile-button"
-          />
-          Kyle Kent
-        </button>
-        <button type="button" class="btn btn-outline-secondary logout-button">
-          Logout
-        </button>
+    <!-- *** MAIN NAV START *** -->
+    <nav>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-9 g-2">
+            <a class="nav-logo" href="google">
+              <img src="./images/logo-airbnb.png" alt="" />
+            </a>
+          </div>
+          <div class="col-3 g-2 align-items-end">
+            <a href="#" class="btn btn-outline-secondary profile-button">
+              <img
+                src="https://avatars.githubusercontent.com/u/19708712?v=4"
+                alt=""
+                class="profile-button"
+              />
+              Kyle Kent
+            </a>
+            <a href="#" class="btn btn-outline-secondary logout-button">
+              Logout
+            </a>
+          </div>
+        </div>
       </div>
     </nav>
+    <!-- *** MAIN NAV END *** -->
     <!-- *** HOUSE LISTING START*** -->
     <div class="container text-center p-5 m- 5">
-      <h2>Edit House</h2>
+      <h2>Edit a House</h2>
+      <!-- **** WHOLE FORM START **** -->
       <form action="" class="list-house-form text-start">
         <!-- *** LIST HOUSE FORM START *** -->
         <div class="mb-3">
           <label for="formGroupExampleInput" class="form-label"
             >Short Title</label
           >
-          <input type="text" class="form-control" id="formGroupExampleInput" />
+          <input type="text" class="form-control" name="house-title" />
         </div>
         <!-- *** LIST HOUSE FORM END *** -->
         <!-- *** LIST HOUSE FORM START *** -->
@@ -52,29 +61,23 @@
             rows="6"
             cols="80"
             class="form-control"
-            id="formGroupExampleInput2"
+            name="house-description"
           ></textarea>
           <div class="mb-3">
             <label for="formGroupExampleInput" class="form-label"
               >Number of Rooms</label
             >
-            <input
-              type="number"
-              class="form-control"
-              id="formGroupExampleInput"
-            />
+            <input type="number" class="form-control" name="house-rooms" />
           </div>
         </div>
         <!-- *** LIST HOUSE FORM END *** -->
         <!-- *** LIST HOUSE FORM START *** -->
         <div class="mb-3">
-          <label for="formGroupExampleInput" class="form-label"
-            >Short Title</label
-          >
-          <select class="form-select" id="formGroupExampleInput">
-            <option value="1">Koh Phangan</option>
-            <option value="2">Kah Samui</option>
-            <option value="3">Bali</option>
+          <label for="formGroupExampleInput" class="form-label">Location</label>
+          <select class="form-select" name="house-location">
+            <option value="kp1">Koh Phangan</option>
+            <option value="ks1">Kah Samui</option>
+            <option value="ba1">Bali</option>
           </select>
         </div>
         <!-- *** LIST HOUSE FORM END *** -->
@@ -89,102 +92,104 @@
               type="number"
               class="form-control"
               aria-label="Amount (to the nearest dollar)"
+              name="house-price"
             />
             <span class="input-group-text">.00</span>
           </div>
         </div>
         <!-- *** HOUSE PRICE FORM END *** -->
         <!-- *** ADD PHOTOS START*** -->
-        <label for="basic-url" class="form-label">Your vanity URL</label>
+        <label for="basic-url" class="form-label">Add Photos (Up to 9)</label>
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
+
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
+
         <div class="input-group mb-3">
           <input
             type="url"
             class="form-control"
-            id="basic-url"
             aria-describedby="basic-addon3"
             placeholder="http://..."
+            name="house-photos"
           />
         </div>
+
         <!-- *** ADD PHOTOS END *** -->
         <div class="">
           <button type="button" class="btn btn-success">Submit</button>
         </div>
         <div class="">
-          <button type="button" class="btn btn-danger my-2">
-            Delete House
-          </button>
+          <a href="#" type="button" class="btn btn-danger my-2">Delete House</a>
         </div>
       </form>
     </div>
