--- a/signup.html
+++ b/signup.html
@@ -19,50 +19,44 @@
     >
       <div class="card-body">
         <img src="./images/logo-airbnb.png" alt="" />
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label"
-            >Full Name</label
-          >
-          <input
-            type="text"
-            class="form-control"
-            id="exampleFormControlInput1"
-          />
-        </div>
-        <div class="mb-3">
-          <label for="exampleFormControlInput2" class="form-label"
-            >Profile Picture</label
-          >
-          <input
-            type=" url"
-            class="form-control"
-            id="exampleFormControlInput2"
-            placeholder="http://..."
-          />
-        </div>
-        <div class="mb-3">
-          <label for="exampleFormControlInput3" class="form-label"
-            >Email address</label
-          >
-          <input
-            type="email"
-            class="form-control"
-            id="exampleFormControlInput3"
-          />
-        </div>
-        <div class="mb-3">
-          <label for="exampleFormControlInput2" class="form-label"
-            >Password</label
-          >
-          <input
-            type="password"
-            class="form-control"
-            id="exampleFormControlInput2"
-          />
-        </div>
-        <div class="">
-          <button type="button" class="btn btn-success">Signup</button>
-        </div>
+        <form>
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label"
+              >Full Name</label
+            >
+            <input type="text" class="form-control" name="profile-fullname" />
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlInput2" class="form-label"
+              >Profile Picture</label
+            >
+            <input
+              type=" url"
+              class="form-control"
+              name="profile-picture"
+              placeholder="http://..."
+            />
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlInput3" class="form-label"
+              >Email address</label
+            >
+            <input type="email" class="form-control" name="profile-email" />
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlInput2" class="form-label"
+              >Password</label
+            >
+            <input
+              type="password"
+              class="form-control"
+              name="profile-password"
+            />
+          </div>
+          <div class="">
+            <button class="btn btn-success">Signup</button>
+          </div>
+        </form>
         <span>Already have an account?</span>
         <a href="#" class="card-link">Login</a>
       </div>
