--- a/profile.html
+++ b/profile.html
@@ -41,68 +41,64 @@
     <!-- *** MAIN NAV END *** -->
     <div class="container text-center">
       <div class="row">
-        <div class="col">
+        <div class="col-4">
           <h1 class="border-bottom">Profile</h1>
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label"
-              >Full Name</label
-            >
-            <input
-              type="text"
-              class="form-control"
-              id="exampleFormControlInput1"
-            />
-          </div>
+          <form>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label"
+                >Full Name</label
+              >
+              <input type="text" class="form-control" name="profile-name" />
+            </div>
 
-          <div class="mb-2">
-            <label for="exampleFormControlInput3" class="form-label"
-              >Email address</label
-            >
-            <input
-              type="email"
-              class="form-control"
-              id="exampleFormControlInput3"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="exampleFormControlInput2" class="form-label"
-              >Password</label
-            >
-            <input
-              type="password"
-              class="form-control"
-              id="exampleFormControlInput2"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="formGroupExampleInput" class="form-label"
-              >Profile Picture</label
-            >
-            <div class="">
-              <img
-                src="https://avatars.githubusercontent.com/u/19708712?v=4"
-                alt=""
-                class="profile-button"
+            <div class="mb-2">
+              <label for="exampleFormControlInput3" class="form-label"
+                >Email address</label
+              >
+              <input type="email" class="form-control" name="profile-email" />
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlInput2" class="form-label"
+                >Password</label
+              >
+              <input
+                type="password"
+                class="form-control"
+                name="profile-password"
               />
             </div>
-          </div>
-          <div class="mb-3">
-            <input
-              type=" url"
-              class="form-control"
-              id="exampleFormControlInput2"
-              placeholder="http://..."
-            />
-          </div>
-          <div class="">
-            <button type="button" class="btn btn-success">Save Changes</button>
-          </div>
+            <div class="mb-3">
+              <label for="formGroupExampleInput" class="form-label"
+                >Profile Picture</label
+              >
+              <div class="">
+                <img
+                  src="https://avatars.githubusercontent.com/u/19708712?v=4"
+                  alt=""
+                  class="profile-button"
+                />
+              </div>
+            </div>
+            <div class="mb-3">
+              <input
+                type=" url"
+                class="form-control"
+                name="profile-picture"
+                placeholder="http://..."
+              />
+            </div>
+            <div class="">
+              <button type="button" class="btn btn-success">
+                Save Changes
+              </button>
+            </div>
+          </form>
         </div>
 
-        <div class="col-9">
+        <div class="col-7 offset-1">
           <h1 class="border-bottom">My Listings</h1>
           <div class="text-start mx-4">
-            <button type="button" class="btn btn-success">
+            <button class="btn btn-success">
               List a House
             </button>
           </div>
