--- a/signup.html
+++ b/signup.html
@@ -11,6 +11,10 @@
     />
     <link rel="stylesheet" href="./styles/bootstrap.css" />
     <link rel="stylesheet" href="./styles/airbnbStyleSheet.css" />
+    <script
+      src="https://kit.fontawesome.com/bd0df542dc.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="login-background">
     <div
